--- a/webpage/src/app/components/head/card/icons-social-medias/icons-social-medias.component.css
+++ b/webpage/src/app/components/head/card/icons-social-medias/icons-social-medias.component.css
@@ -1,5 +1,4 @@
 section {
-    padding: 10% 5% 5% 5%;
     display: flex;
 }
 
